Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3390

TrafficServer segfaults on shutdown because of uninitialized SPDY sessions

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.3.0
    • Core, SPDY
    • None

    Description

      Fix will be committed soon.

      #0  0x0000000000516d18 in Ptr<ProxyMutex>::operator-> (this=0x18) at ../lib/ts/Ptr.h:330
      No locals.
      #1  0x000000000063d102 in SpdyRequest::clear (this=0xac7b08) at SpdyClientSession.cc:69
              __func__ = "clear"
      #2  0x000000000063edfd in SpdyRequest::~SpdyRequest (this=0xac7b08, __in_chrg=<value optimized out>) at SpdyClientSession.h:58
      No locals.
      #3  0x000000000063eb46 in ClassAllocator<SpdyRequest>::._206::~._206() () at ../../lib/ts/Allocator.h:204
      No symbol table info available.
      #4  0x00000000006404ce in ClassAllocator<SpdyRequest>::~ClassAllocator (this=0xac7b00, __in_chrg=<value optimized out>) at ../../lib/ts/Allocator.h:118
      No locals.
      #5  0x0000003375c35b22 in exit () from /lib64/libc.so.6
      

      Attachments

        Activity

          People

            briang Brian Geffon
            briang Brian Geffon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: