TS-3390: TrafficServer segfaults on shutdown because of unitialized spdy sessions